Fixed: Deprecation Warning about new Integer(int)